fix futura on safari

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -42,8 +42,10 @@
 }
 
 @font-face {
-    font-family: 'Futura';
-    src: url(fonts/Futura.ttf);
+    font-family: 'Futura', sans-serif;
+    src: url(fonts/Futura.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
